--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -5,7 +5,7 @@ $color-black: #000000;
 $color-yellow: #f7b42c;
 $color-cream: #f0e5d8;
 $color-grey: #121212;
-$color-red: #fc575e;
+$color-red: #FF0C00;
 $header-gradient: linear-gradient(315deg, #FF5A00 0%, #FF0C00 74%);
 
 $radius-2: 2px;
