--- a/common/common.scss
+++ b/common/common.scss
@@ -163,8 +163,8 @@ ul.nav-pills {
 }
 
 .topic-map {
-  border-color $color-grey;
-  border-size 2px solid;
+  border-color: $color-grey;
+  border-size: 2px solid;
   border-radius: $radius-6;
 }
 
