--- a/common/common.scss
+++ b/common/common.scss
@@ -163,7 +163,7 @@ ul.nav-pills {
 }
 
 .topic-map {
-  border-color: $color-grey;
+  border-color: $color-cream;
   border-size: 2px solid;
   border-radius: $radius-6;
 }
