--- a/common/common.scss
+++ b/common/common.scss
@@ -66,7 +66,7 @@ body {
 // Buttons
 // *------------------------------------------------*
 .btn {
-  background: $primary-low;
+  background: none /*$primary-low*/;
   color: $color-white;
   border-radius: $radius-6;
   .discourse-no-touch & {
@@ -164,10 +164,12 @@ ul.nav-pills {
 
 .topic-map {
   border-top: none;
-  border-left: none;
-  border-right: none;
-  border-size: 2px solid;
+  border-size: 3px solid;
   border-radius: $radius-6;
+}
+
+.topic-map-expended {
+  border-top: none;
 }
 
 // User Page
