--- a/common/common.scss
+++ b/common/common.scss
@@ -165,6 +165,8 @@ ul.nav-pills {
 .topic-map {
   border: 1px solid;
   border-radius: $radius-6;
+  /*border-color: $color-cream*/
+  border-color: $header-gradient;
 }
 
 .topic-map section {
