--- a/common/common.scss
+++ b/common/common.scss
@@ -165,7 +165,7 @@ ul.nav-pills {
 .topic-map {
   border: 1px solid;
   border-radius: $radius-6;
-  border-color: $color-cream;
+  border-color: $color-grey;
 }
 
 .topic-map section {
