--- a/common/common.scss
+++ b/common/common.scss
@@ -164,8 +164,7 @@ ul.nav-pills {
 
 .topic-map {
   border: 1px solid;
-  border-radius: $radius-6;
-  border-color: $color-grey;
+  border-radius: $radius-6 var(--primary-low);
 }
 
 .topic-map section {
