--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -6,6 +6,7 @@ $color-yellow: #f7b42c;
 $color-cream: #f0e5d8;
 $color-grey: #121212;
 $color-red: #FF0C00;
+$color-bgrey: #383838;
 $header-gradient: linear-gradient(315deg, #FF5A00 0%, #FF0C00 74%);
 
 $radius-2: 2px;
