--- a/common/common.scss
+++ b/common/common.scss
@@ -173,6 +173,14 @@ ul.nav-pills {
   background-color: transparent;
 }
 
+.small-action {
+  border: none;
+}
+
+.d-toc-main {
+  border: none;
+}
+
 // User Page
 // *------------------------------------------------*
 .user-content {
