--- a/common/common.scss
+++ b/common/common.scss
@@ -177,7 +177,9 @@ ul.nav-pills {
   border: none;
 }
 
-.d-toc-main {
+// Table of Contents
+// *------------------------------------------------*
+.d-toc-article > row {
   border: none;
 }
 
