--- a/common/common.scss
+++ b/common/common.scss
@@ -179,7 +179,7 @@ ul.nav-pills {
 
 // Table of Contents
 // *------------------------------------------------*
-.d-toc-article > row {
+.d-toc {
   border: none;
 }
 
