--- a/common/common.scss
+++ b/common/common.scss
@@ -197,6 +197,7 @@ ul.nav-pills {
   border-top-left-radius: $radius-6;
   border-top-right-radius: $radius-6;
   z-index: 2;
+}
 
 // Advanced Search
 // *------------------------------------------------*
