--- a/common/common.scss
+++ b/common/common.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: Gotham;
-  src: url($GothamBook) format('ttf')
+  src: url(../assets/GothamBook.ttf) format('ttf')
 }
 
 body {
