--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -7,7 +7,11 @@ $color-cream: #f0e5d8;
 $color-grey: #121212;
 $color-red: #FF0C00;
 $color-bgrey: #383838;
+// Temporary color
+$header-gradient: #0e0d0d;
+/* Remove gradient for tweaking
 $header-gradient: linear-gradient(315deg, #FF5A00 0%, #FF0C00 74%);
+*/
 
 $radius-2: 2px;
 $radius-4: 4px;
