--- a/common/common.scss
+++ b/common/common.scss
@@ -33,7 +33,8 @@ body {
 // Header
 // *------------------------------------------------*
 .d-header {
-  background-image: $header-gradient;
+/*  background-image: $header-gradient; */
+  background-color: #0e0d0d;
   height: 3.10em;
 }
 
