--- a/common/common.scss
+++ b/common/common.scss
@@ -221,7 +221,7 @@ ul.nav-pills {
 // *------------------------------------------------*
 .search-container .search-advanced-sidebar {
   .search-advanced-title {
-    background: $header-gradient;
+    background: #0e0d0d;
   }
 }
 
@@ -248,5 +248,5 @@ a:visited {
 }
 
 .open .grippie {
-  background: $header-gradient;
+  background: #0e0d0d;
 }
